# Rust-STM32-DS323x-RTIC

./: Cargo.toml  Embed.toml  README.md
.cargo/: config
src/: main.rs  main3.rs  usb_serial.rs
